--- a/VuThanhDuong_DA/bin/VuThanhDuong_DA.dll.config
+++ b/VuThanhDuong_DA/bin/VuThanhDuong_DA.dll.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="shs_databaseConnectionString" connectionString="Data Source=VUTHANHDUONG;Initial Catalog=shs_database;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
