--- a/VuThanhDuong_DA/VuThanhDuong_DA.csproj
+++ b/VuThanhDuong_DA/VuThanhDuong_DA.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>SHSDB.dbml</DependentUpon>
     </None>
     <Content Include="Views\User\LoginFailed.cshtml" />
+    <Content Include="Views\User\LogOutModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
