--- a/VuThanhDuong_DA/bin/VuThanhDuong_DA.dll.config
+++ b/VuThanhDuong_DA/bin/VuThanhDuong_DA.dll.config
@@ -28,6 +28,7 @@
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.8" />
+	<sessionState timeout="200"></sessionState>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
