--- a/VuThanhDuong_DA/Web.config
+++ b/VuThanhDuong_DA/Web.config
@@ -26,9 +26,9 @@
       </system.Web>
   -->
   <system.web>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="104850"/>
     <compilation debug="true" targetFramework="4.8" />
-	<sessionState timeout="200"></sessionState>
+	<sessionState timeout="60"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -43,6 +43,11 @@
     </pages>
   </system.web>
   <system.webServer>
+	<security>
+		<requestFiltering>
+			<requestLimits maxAllowedContentLength="104850000" />
+		</requestFiltering>
+	</security>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
